--- a/periodic-team-avatar-creator.html
+++ b/periodic-team-avatar-creator.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Periodic Team Avatar</title>
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
         <script>
             const noblegases = {
                 helium: {
