--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Make your Avatar</title>
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
         <style>
             body {
                 padding: 2em;
